# jaldis-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md
src/: command_handler.hpp  command_handler_tests.cpp  commands.hpp  error_checker.hpp  fd_guard.hpp  file_descriptor.hpp  main.cpp  server.cpp  server.hpp  storage.cpp  storage.hpp  storage_tests.cpp
src/resp/: handler.cpp  handler.hpp  handler_tests.cpp  parser.cpp  parser.hpp  parser_tests.cpp  serializer.hpp  serializer_tests.cpp  values.hpp
